--- a/app/views/shared/_errors.html.slim
+++ b/app/views/shared/_errors.html.slim
@@ -9,5 +9,5 @@
           - id = i18n_simple_form_id(model, error)
           - label = :base == error ? nil : i18n_simple_form_label(model, error)
           li.form-errors__item
-            label for=id class="form-errors__label" = [label, message].compact.join(" ")
+            label for=id class="form-errors__label" == [label, message].compact.join(" ")
 
